--- a/presentation_website/Gemfile
+++ b/presentation_website/Gemfile
@@ -1,6 +1,9 @@
 source 'https://rubygems.org'
 
 
+gem "haml-rails", "~> 1.0"
+
+
 # Bundle edge Rails instead: gem 'rails', github: 'rails/rails'
 gem 'rails', '4.2.6'
 # Use sqlite3 as the database for Active Record
